# CSNZ_Server

./: .gitignore  .gitmodules  README.md
doc/: documentation.md  eventquests.md  itembox.md  serverconfig.md
docs/: codingstyle.md  documentation.md  eventquests.md  glossary.md  itemrewards.md  randomweaponlist.md  serverconfig.md  serverconfiguration.md  shop.md  weaponpaints.md  zombiewarweaponlist.md
docs/diagrams/: srv.vpp
docs/doxygen/: Doxyfile
src/: Buffer.cpp  Buffer.h  BuildNum.cpp  CMakeLists.txt  CSVTable.cpp  CSVTable.h  Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  ChannelServer.cpp  ChannelServer.h  ClanManager.cpp  ClanManager.h  Console.cpp  Console.h  CrashDump.cpp  CrashDump.h  DedicatedServerManager.cpp  DedicatedServerManager.h  Definitions.h  Event.h  ExtendedSocket.cpp  ExtendedSocket.h  GameMatch.cpp  GameMatch.h  HostManager.cpp  HostManager.h  IChannelManager.h  IClanManager.h  IDedicatedServerManager.h  IEvent.h  IHostManager.h  IItemManager.h  ILuckyItemManager.h  IManager.h  IMiniGameManager.h  IPacketManager.h  IQuestManager.h  IRankManager.h  (+78 more)
src/Common/: Thread.cpp  Thread.h  Utils.cpp  Utils.h
src/GUI/: BanDialog.cpp  BanDialog.h  BanDialog.ui  CMakeLists.txt  ConsoleTab.cpp  ConsoleTab.h  ConsoleTab.ui  GUI.cpp  GUI.h  HWIDBanListDialog.cpp  HWIDBanListDialog.ui  IGUI.h  IPBanListDialog.cpp  IPBanListDialog.ui  MainTab.cpp  MainTab.h  MainTab.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NoticeDialog.cpp  NoticeDialog.h  NoticeDialog.ui  RoomListTab.cpp  RoomListTab.ui  SelectUserDialog.cpp  SelectUserDialog.h  SelectUserDialog.ui  SessionTab.cpp  SessionTab.h  SessionTab.ui  UserBanListDialog.cpp  UserCharacterDialog.cpp  UserCharacterDialog.h  UserCharacterDlg.ui
src/Interfaces/: IDedicatedServerManager.h  IEvent.h  IExtendedSocket.h  IItemManager.h  ILuckyItemManager.h  IMiniGameManager.h  IPacketManager.h  IQuestManager.h  IRankManager.h  IRoom.h  IShopManager.h  IUser.h  IUserDatabase.h  IUserManager.h
src/channel/: channel.cpp  channel.h  channelserver.cpp  channelserver.h
src/common/: buffer.cpp  buffer.h  buildnum.h  console.cpp  console.h  logger.cpp  logger.h  thread.cpp  thread.h  utils.cpp  utils.h
src/common/net/: netdefs.h
src/gui/: CMakeLists.txt  bandialog.cpp  bandialog.ui  consoletab.cpp  consoletab.h  consoletab.ui  gui.cpp  gui.h  hwidbanlistdialog.cpp  hwidbanlistdialog.h  igui.h  ipbanlistdialog.h  maintab.cpp  maintab.h  maintab.ui  mainwindow.cpp  noticedialog.cpp  noticedialog.h  roomlisttab.h  selectuserdialog.cpp  sessiontab.cpp  sessiontab.h  userbanlistdialog.h  userbanlistdialog.ui  usercharacterdialog.cpp  usercharacterdialog.h  usercharacterdialog.ui
src/interface/: ichannelmanager.h  iclanmanager.h  idedicatedservermanager.h  ievent.h  iextendedsocket.h  ihostmanager.h  iitemmanager.h  iluckyitemmanager.h  imanager.h  iminigamemanager.h  ipacketmanager.h  iquestmanager.h  irankmanager.h  iroom.h  iserverinstance.h  ishopmanager.h  iuser.h  iuserdatabase.h  iusermanager.h  ivoxelmanager.h
src/interface/net/: iextendedsocket.h  iserverlistener.h
src/manager/: channelmanager.cpp  channelmanager.h  clanmanager.cpp  clanmanager.h  dedicatedservermanager.cpp  dedicatedservermanager.h  hostmanager.cpp  hostmanager.h  itemmanager.cpp  itemmanager.h  luckyitemmanager.cpp  luckyitemmanager.h  manager.cpp  manager.h  minigamemanager.cpp  minigamemanager.h  packetmanager.cpp  packetmanager.h  questmanager.cpp  questmanager.h  rankmanager.cpp  rankmanager.h  shopmanager.cpp  shopmanager.h  userdatabase.cpp  userdatabase.h  userdatabase_shared.h  userdatabase_sqlite.cpp  userdatabase_sqlite.h  usermanager.cpp  usermanager.h  voxelmanager.cpp  voxelmanager.h
src/net/: CMakeLists.txt  extendedsocket.cpp  extendedsocket.h  net.h  network.cpp  network.h  receivepacket.cpp  receivepacket.h  sendpacket.cpp  sendpacket.h  socketshared.cpp  tcpclient.cpp  tcpserver.cpp  udpserver.cpp
src/packet/: packet_metadata_data.h  packethelper_fulluserinfo.cpp  packethelper_fulluserinfo.h  packetin_udp.cpp  packetin_udp.h
src/public/net/: extendedsocket.h  receivepacket.h  sendpacket.h  socketshared.h  tcpclient.h  tcpserver.h  udpserver.h
src/quest/: quest.cpp  quest.h  questevent.cpp  questevent.h
src/room/: gamematch.cpp  gamematch.h  room.cpp  room.h  roomsettings.cpp  roomsettings.h
src/test/: CMakeLists.txt  testcommand.cpp  testevent.cpp  testlogger.cpp  testmanager.cpp
src/test/net/: CMakeLists.txt  net.cpp  testbasicfuncs.h  testpacketsequence.h
src/user/: user.cpp  user.h  userfastbuy.h  userinventoryitem.cpp  userinventoryitem.h  userloadout.h
